--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 </head>
 <body id="body">
     <div id="filterbar">
-        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Filter</a>
+        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Type</a>
         <a class="sphericalbutton" onmouseup="sorts()"><i class="fa-solid fa-sort"></i> Sort</a>
         <div id="filtertags">
             <br/>
@@ -39,7 +39,24 @@
             <a class="filterbutton" onclick="filter('Music');"><i class="fa-solid fa-music"></i> Music</a>
         </div>
         <div id="sorttags">
-
+            <br/>
+            <Br/>
+            <a class="filterbutton" onclick="filter('All');"><i class="fa-regular fa-rectangle-list"></i> sorts</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
+            <a class="filterbutton" onclick="filter('Website');"><i class="fa-solid fa-globe"></i> sorts</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
+            <a class="filterbutton" onclick="filter('Design');"><i class="fa-solid fa-pen-nib"></i> sorts</a>
+            <br>
+            <br>
+            <a class="filterbutton" onclick="filter('Shortcut');"><i class="fa-brands fa-apple"></i> sorts</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
+            <a class="filterbutton" onclick="filter('Video');"><i class="fa-solid fa-film"></i> sorts</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
+            <a class="filterbutton" onclick="filter('Music');"><i class="fa-solid fa-music"></i> sorts</a>
         </div>
     </div>
     <nav id="navigation" class="navdown">
