--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 </head>
 <body id="body">
     <div id="filterbar">
-        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Type</a>
+        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Filter</a>
         <a class="sphericalbutton" onmouseup="sorts()"><i class="fa-solid fa-sort"></i> Sort</a>
         <div id="filtertags">
             <br/>
