--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="reviewerimg" style="background-color: #bb00ff;"></div><p class="reviewer">Nate</p>
                 <br>
                 <br>
-                <p class="projecttype">YouTube Channel Banner (34.8K Subs)</p>
+                <p class="projecttype">YouTube Banner (34.8K Subs)</p>
             </div>
             <div class="review">
                 <h1>
