--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/x-icon" href="Images/fav.ico">
     <meta name="theme-color" content="#ff2d2d" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta property="og:image" content="Images/homecover.png"/>
+    <meta property="og:title" content="Home - Michael Dors"/>
 </head>
 <body id="body">
 
