--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta property="og:image" content="https://michaeldors.com/Images/homecover.jpg"/>
     <meta property="og:title" content="Home - Michael Dors"/>
+    <meta property="og:type" content="website" />
 </head>
 <body id="body">
 
