--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,9 @@
     <link rel="icon" type="image/x-icon" href="Images/fav.ico">
     <meta name="theme-color" content="#ff2d2d" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta property="og:image" content="Images/projectscover.png"/>
+    <meta property="og:image" content="https://michaeldors.com/Images/projectscover.jpg"/>
     <meta property="og:title" content="Projects - Michael Dors"/>
+    <meta property="og:type" content="website" />
 </head>
 <body id="body">
     <div id="filterbar">
