--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://michaeldors.com/Images/aboutcover.jpg"/>
     <meta property="og:title" content="About - Michael Dors"/>
     <meta property="og:type" content="website" />
+    <meta property="og:description" content="About me, my creative process, and more."/>
 </head>
 <body id="body">
     <nav id="navigation" class="navdown">
