--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://michaeldors.com/Images/homecover.jpg"/>
     <meta property="og:title" content="Home - Michael Dors"/>
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://michaeldors.com/"/>
     <meta property="og:description" content="The homepage for Michael Dors' portfolio."/>
 </head>
 <body id="body">
