--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <meta property="og:title" content="About - Michael Dors"/>
     <meta property="og:type" content="website" />
     <meta property="og:description" content="About me, my creative process, and more."/>
+    <meta property="og:site_name" content="Michael Dors" />
 </head>
 <body id="body">
     <nav id="navigation" class="navdown">
