--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/"/>
     <meta property="og:description" content="The homepage for Michael Dors' portfolio."/>
+    <meta property="og:site_name" content="Michael Dors" />
 </head>
 <body id="body">
 
