--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/projects.html"/>
     <meta property="og:description" content="Projects I've worked on or am currently working on."/>
+    <meta property="og:site_name" content="Michael Dors" />
 </head>
 <body id="body">
     <div id="filterbar">
