--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="About me, my creative process, and more."/>
     <meta property="og:site_name" content="Michael Dors" />
-    <meta property="og:url" content="https://michaeldors.com/"/>
+    <meta property="og:url" content="https://michaeldors.com/about"/>
 </head>
 <body id="body">
     <nav id="navigation" class="navdown">
