--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="https://michaeldors.com/Images/projectscover.jpg"/>
     <meta property="og:title" content="Projects - Michael Dors"/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://michaeldors.com/projects.html"/>
+    <meta property="og:url" content="https://michaeldors.com/projects"/>
     <meta property="og:description" content="Projects I've worked on or am currently working on."/>
     <meta property="og:site_name" content="Michael Dors" />
 </head>
