--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -10,6 +10,13 @@
 
     <script src="Dependencies/confetti.js"></script>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
+    <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg"/>
+    <meta property="og:title" content="Countdown - Michael Dors"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://michaeldors.com/mcacountdown/timer"/>
+    <meta property="og:description" content="A beautiful countdown timer website."/>
+    <meta property="og:site_name" content="Michael Dors" />
 </head>
 
 <body id="body" style="background-color:#141414;  overflow-x:hidden;">
