--- a/messagekit.html
+++ b/messagekit.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:image" content="https://michaeldors.com/Images/messagekitcover.jpg"/>
+    <meta property="og:title" content="MessageKit - Michael Dors"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://michaeldors.com/messagekit"/>
+    <meta property="og:description" content="Tons of messaging tools via Siri Shortcuts."/>
+    <meta property="og:site_name" content="Michael Dors" />
     <title>MessageKit for Siri Shortcuts</title>
     <style>
         .center {
