--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://michaeldors.com/"/>
     <meta property="og:description" content="The homepage for Michael Dors' portfolio."/>
     <meta property="og:site_name" content="Michael Dors" />
-    <link rel="apple-touch-icon" href="/homescreen.png">
+    <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
 <body id="body">
 
