--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://michaeldors.com/projects"/>
     <meta property="og:description" content="Projects I've worked on or am currently working on."/>
     <meta property="og:site_name" content="Michael Dors" />
-    <link rel="apple-touch-icon" href="/homescreen.png">
+    <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
 <body id="body">
     <div id="filterbar">
