--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="About me, my creative process, and more."/>
     <meta property="og:site_name" content="Michael Dors" />
     <meta property="og:url" content="https://michaeldors.com/about"/>
-    <link rel="apple-touch-icon" href="/homescreen.png">
+    <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
 <body id="body">
     <nav id="navigation" class="navdown">
