--- a/messagekit.html
+++ b/messagekit.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Tons of messaging tools via Siri Shortcuts."/>
     <meta property="og:site_name" content="Michael Dors" />
     <title>MessageKit for Siri Shortcuts</title>
+    <link rel="apple-touch-icon" href="Images/messagekithomescreen.png">
     <style>
         .center {
             margin:auto;
