--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -17,6 +17,7 @@
     <meta property="og:url" content="https://michaeldors.com/mcacountdown/timer"/>
     <meta property="og:description" content="A beautiful countdown timer website."/>
     <meta property="og:site_name" content="Michael Dors" />
+    <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
 </head>
 
 <body id="body" style="background-color:#141414;  overflow-x:hidden;">
