--- a/index.html
+++ b/index.html
@@ -164,24 +164,34 @@
             <p data-aos="fade-up">
                 Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05')">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
         </section>
     </div>
     <section class="considering">
-        <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200; cursor:pointer;" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('mailto:contact@michaeldors.com')">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
+        <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200; cursor:pointer;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
     </section>
-    <section>
-        <div class="footer">
-            <p>created with <i class="fa-solid fa-heart"></i>, <i class="fa-solid fa-code"></i>, and <i class="fa-solid fa-photo-film"></i></p>
-            <br />
-            <div id="playcontain">
-                <video id="player" autoplay muted loop playsinline>
-                    <source src="Images/glowing.mp4" type="video/mp4">
-                </video>
+    <div style="background: #ff2121;">
+        <section style="border-top-right-radius:50px; border-top-left-radius:50px;">
+            <div style="border-top-right-radius:50px; border-top-left-radius:50px;">
+                <div class="footer">
+                    <div id="playcontain">
+                        <video id="player" autoplay muted loop playsinline>
+                            <source src="Images/glowing.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <p>created with <i class="fa-solid fa-heart"></i>, <i class="fa-solid fa-code"></i>, and <i class="fa-solid fa-photo-film"></i></p>
+                    <br />
+                    <i class="fa-solid fa-cross"></i>
+                    <br />
+                    <br />
+                    <p id="birthdaycountdown"></p>
+                    <br />
+                    <br />
+                    <p data-aos="fade" class="barcode">MICHAELDORSWEB</p>
+                </div>
             </div>
-            <i class="fa-solid fa-cross"></i>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
@@ -201,4 +211,16 @@
             document.getElementById("navigation").classList.remove("navdown");
         }
     });
+
+    var element = document.getElementById('birthdaycountdown');
+        const currentYear = new Date().getFullYear();
+
+        const targetDate = new Date(currentYear, 2, 5);
+        const currentDate = new Date();
+
+        const difference = targetDate.getTime() - currentDate.getTime();
+
+        const daysUntilTargetDate = Math.ceil(difference / (1000 * 60 * 60 * 24));
+
+        element.innerHTML = daysUntilTargetDate + " days until my birthday";
 </script>
