--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p data-aos="fade-up">
                 Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://mk.michaeldors.com')">Get It Free</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
         <section class="projectarea">
             <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/countdown.png" />
@@ -97,7 +97,7 @@
                 <br />
                 This project was made in HTML, CSS, and JS.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
         <section class="reviews" style="scroll-snap-align: start">
             <div class="reviewsectioncontainterimg">
