--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <p id="birthdaycountdown"></p>
                     <br />
                     <br />
-                    <p data-aos="fade" class="barcode">MICHAELDORSWEB</p>
+                    <p data-aos="fade" class="barcode">MICHAELDORS</p>
                 </div>
             </div>
         </section>
