--- a/projects.html
+++ b/projects.html
@@ -151,7 +151,7 @@
         </section>
     </div>
 
-    <div style="background: #ff2121;">
+    <div style="background: #202020;">
         <section style="border-top-right-radius:50px; border-top-left-radius:50px;">
             <div style="border-top-right-radius:50px; border-top-left-radius:50px;">
                 <div class="footer">
