--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a onclick="transitionToPage('index.html')">Home</a>
                 <a onclick="transitionToPage('about.html')">About Me</a>
                 <a onclick="transitionToPage('projects.html')">Projects</a>
-                <a href="mailto:contact@michaeldors.com">Contact</a>
+                <a href="mailto:contact@michaeldors.com" style="text-decoration: none;">Contact</a>
             </div>
         </div>
         <div id="mobileopennav">
@@ -101,11 +101,11 @@
         </section>
         <section class="reviews" style="scroll-snap-align: start">
             <div class="reviewsectioncontainterimg">
-                <img src="Images/commentbanner.png">
+                <img data-aos="zoom-in-up" src="Images/commentbanner.png">
             </div>
         </section>
         <section class="reviews" style="align-items: stretch; display: flex; flex-direction: row; flex-wrap: nowrap; overflow-x: auto; overflow-y: hidden;">
-            <div class="review">
+            <div data-aos="flip-up" class="review">
                 <h1>
                     "10/10 couldn't have asked for anything better"
                 </h1>
@@ -114,7 +114,7 @@
                 <br>
                 <p class="projecttype">YT Banner (34.8K Subs)</p>
             </div>
-            <div class="review">
+            <div data-aos="flip-down" class="review">
                 <h1>
                     "One of the most ambitious shortcuts I've ever seen... Really pushing the limits of Shortcuts in every way imaginable."
                 </h1>
@@ -123,7 +123,7 @@
                 <br>
                 <p class="projecttype">User of MessageKit</p>
             </div>
-            <div class="review">
+            <div data-aos="flip-up" class="review">
                 <h1>
                     "Just watched it. We are so pleased. You did an excellent job on the video."
                 </h1>
@@ -132,7 +132,7 @@
                 <br>
                 <p class="projecttype">Presentation Video</p>
             </div>
-            <div class="review">
+            <div data-aos="flip-down" class="review">
                 <h1>
                     "It's a very good website that makes finding my listing very easy for the viewer and the quality is very good."
                 </h1>
@@ -141,7 +141,7 @@
                 <br>
                 <p class="projecttype">Website</p>
             </div>
-            <div class="review" style="margin-right:30px; background-color: #FF3232;">
+            <div data-aos="flip-up" class="review" style="margin-right:30px; background-color: #FF3232;">
                 <Br>
                 <h1 style="width:100%; text-align: center; color:#240200; position:absolute; bottom:27%; left:0%;">
                     <br>
