--- a/about.html
+++ b/about.html
@@ -88,5 +88,9 @@
 
     const daysUntilTargetDate = Math.ceil(difference / (1000 * 60 * 60 * 24));
 
-    element.innerHTML = daysUntilTargetDate + " days until my birthday";
+    if(daysUntilTargetDate < 2){
+        element.innerHTML = daysUntilTargetDate + " day until my birthday";
+    }else{
+        element.innerHTML = daysUntilTargetDate + " days until my birthday";
+    }
 </script>
