--- a/projects.html
+++ b/projects.html
@@ -197,9 +197,7 @@
 
     const daysUntilTargetDate = Math.ceil(difference / (1000 * 60 * 60 * 24));
 
-    if(daysUntilTargetDate == 0){
-        element.innerHTML = "Today is my birthday!";
-    }else if(daysUntilTargetDate < 2){
+    if(daysUntilTargetDate < 2){
         element.innerHTML = daysUntilTargetDate + " day until my birthday";
     }else{
         element.innerHTML = daysUntilTargetDate + " days until my birthday";
