--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@
 
         const daysUntilTargetDate = Math.ceil(difference / (1000 * 60 * 60 * 24));
 
-        if(daysUntilTargetDate == 1){
+    if(daysUntilTargetDate == 1){
         element.innerHTML = daysUntilTargetDate + " day until my birthday";
-        }else{
+    }else if(daysUntilTargetDate == 0){
+        element.innerHTML = "Today is my birthday!";
+    }else{
         element.innerHTML = daysUntilTargetDate + " days until my birthday";
-        }
+    }
 </script>
