--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 <body id="body">
     <div id="filterbar">
         <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Filter</a>
-        <a class="sphericalbutton" onmouseup="sorts()"><i class="fa-solid fa-sort"></i> Sort</a>
+        <a class="sphericalbutton" onmouseup="nextproject()"><i class="fa-solid fa-circle-arrow-down"></i> Next</a>
         <div id="filtertags">
             <br/>
             <Br/>
