--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 </head>
 <body id="body">
     <div id="filterbar">
-        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Filter</a>
+        <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Refine</a>
         <a class="sphericalbutton" onmouseup="nextproject()"><i class="fa-solid fa-circle-arrow-down"></i> Next</a>
         <div id="filtertags">
             <br/>
