--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <a class="filterbutton" onclick="filter('Video');"><i class="fa-solid fa-film"></i> Videos</a>
             <br class="mobilebr">
             <br class="mobilebr">
-            <a class="filterbutton" onclick="filter('Music');"><i class="fa-solid fa-music"></i> Music</a>
+            <a class="filterbutton" onclick="filter('Insta');"><i class="fa-solid fa-camera-retro"></i> Instagram</a>
         </div>
         <div id="sorttags">
             <br/>
