--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
 <body id="body">
-    <div id="filterbar">
+    <div id="filterbar" class="downfilterbar">
         <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Refine</a>
         <a class="sphericalbutton" onmouseup="nextproject()"><i class="fa-solid fa-circle-arrow-down"></i> Next</a>
         <div id="filtertags">
@@ -208,4 +208,16 @@
     }else{
         element.innerHTML = daysUntilTargetDate + " days until my birthday";
     }
+
+    var filters = document.getElementById("filterbar");
+    window.addEventListener('scroll', e => {
+            if (window.scrollY > (document.querySelector(".projectarea").offsetHeight - 30)) {
+                filters.classList.add("upfilterbar");
+                filters.classList.remove("downfilterbar");
+            }
+            else {
+                filters.classList.add("downfilterbar");
+                filters.classList.remove("upfilterbar");
+            }
+        });
 </script>
