--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
 <body id="body">
-    <div id="filterbar" class="downfilterbar" onclick="alert(window.scrollY);">
+    <div id="filterbar" class="downfilterbar">
         <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Refine</a>
         <a class="sphericalbutton" onmouseup="nextproject()"><i class="fa-solid fa-circle-arrow-down"></i> Next</a>
         <div id="filtertags">
