--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@
             <p data-aos="fade-up">
                 A concept/landing page for a to-do app.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Check It Out</a>
         </section>
     </div>
 
