--- a/tareaapp/index.html
+++ b/tareaapp/index.html
@@ -13,45 +13,132 @@
        <link rel="stylesheet" href="style.css">
        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
           crossorigin="anonymous"></script>
+          <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     </head>
     <body>
         <div class="tracker sm-hidden"></div>
+        <div class="header" style="display: none;">
+                <img src="" class="logo">
+                <h1 class="logotext" style="margin-right:60px;">Tarea</h1>
+                <a style="margin-right:60px; display:none;" href="app.html">App</a>
+                <a style="margin-right:60px; display:none" >Landing</a>
+                <a style="margin-right:60px; display:none">Home</a>
+            </div>
         <center>
             <h1 style="margin-top:200px; padding:10px; font-size: 70px; color: white;"><span style="mix-blend-mode:difference;">Get on top of </span><span id="ontopof" style="mix-blend-mode: normal;">things</span><span style="mix-blend-mode:difference; padding-left:5px">.</span></h1>
             <h2 id="minitext" style="margin-top:-40px; mix-blend-mode:difference; padding:10px; color: white;">Tarea organizes your tasks in a way that rewards you for getting them done.</h2>
             <br>
             <br>
-            <button class="button-30" role="button" style="margin-right:10px">Learn More</button>
+            <button class="button-30 jumpbutton" role="button" style="margin-right:10px">Learn More</button>
             <button class="button-29" role="button" style="margin-left:10px">Jump Right In</button>
             <div class="grid">
                 <div class="obj" id="1" onmouseenter="vid1()">
-                    <video id="vid1" style="width:90%" autoplay muted>
-                        <source src="Streak.mp4" type="video/mp4">
-                    </video>
-                    <p>Keep a streak of days you completed all tasks.</p>
+                        <div data-aos="fade-up" data-aos-duration="500">
+                        <video id="vid1" style="width:90%" autoplay muted>
+                            <source src="Streak.mp4" type="video/mp4">
+                        </video>
+                        <p>Keep a streak of days you completed all tasks.</p>
+                    </div>
                 </div>
                 <div class="obj" id="2" onmouseenter="vid2()">
-                    <video id="vid2" style="width:90%" autoplay muted>
-                        <source src="XP.mp4" type="video/mp4">
-                    </video>
-                    <p>Gain XP for each task you complete.</p>
+                    <div data-aos="fade-up" data-aos-duration="800">
+                        <video id="vid2" style="width:90%" autoplay muted>
+                            <source src="XP.mp4" type="video/mp4">
+                        </video>
+                        <p>Gain XP for each task you complete.</p>
+                    </div>
                 </div>
                 <div class="obj" id="3" onmouseenter="vid3()">
-                    <video id="vid3" style="width:90%" autoplay muted>
-                        <source src="Goal.mp4" type="video/mp4">
-                    </video>
-                    <p>Set an XP goal and treat yourself when you reach it.</p>
+                    <div data-aos="fade-up" data-aos-duration="1200">
+                        <video id="vid3" style="width:90%" autoplay muted>
+                            <source src="Goal.mp4" type="video/mp4">
+                        </video>
+                        <p>Set an XP goal and treat yourself when you reach it.</p>
+                    </div>
                 </div>
               </div>
-            <h1 style="text-align: left; padding-left:90px; font-size:50px;">Stop procrastination in its tracks.</h1>
-            <p style="text-align: left; padding-left:90px; padding-right:90px; font-size:20px; margin-top:-20px;">Take the reigns on your organization skills by adding positive reinforcement to every task you complete. Make better habits over time through repetition of these tasks. Add repeated tasks for habits you want to work on every day, week, or month.</p>
-            <img id="scroll-to" src="habits.png" style="width:87vw; border-radius: 20px;">
+            <h1 style="padding: 150px; display:none">have screenshots and main selling points when app is done</h1>
+            <div style="float:left; width:45vw; overflow: hidden;">
+                <h1 style="text-align: left; padding-left:90px; font-size:50px;" data-aos="fade-up" data-aos-duration="500">Stop procrastination in its tracks.</h1>
+                <p style="text-align: left; padding-left:90px; padding-right:90px; font-size:20px; margin-top:-20px;" data-aos="fade-up" data-aos-duration="500">Take the reigns on your organization skills by adding positive reinforcement to every task you complete. Make better habits over time through repetition of these tasks. Add repeated tasks for habits you want to work on every day, week, or month.</p>
+                <div style="text-align: left; margin-left:80px; padding:15px; overflow: hidden;">
+                    <button class="button-30" role="button" style="margin-right:10px" data-aos="fade-up" data-aos-duration="500">All Benefits</button>
+                    <button class="button-29" role="button" style="margin-left:10px" data-aos="fade-up" data-aos-duration="1000">Subscribe Now</button>
+                </div>
+            </div>
+            <div style="float:right; width:45vw; margin-right:5vw; overflow: hidden;">
+                <img id="scroll-to" src="habits.png" style="width:45vw; border-radius: 20px; margin-right: 5vw;" data-aos="fade-up" data-aos-duration="500">
+            </div>
+            <br>
+            <br>
+            <br>
+            <div style="height:100px; width:90vw;"></div>
+            <h1 style="padding-top:100px; font-size: 50px;" data-aos="fade-up" data-aos-duration="500"><span style="margin-left:-130px;" data-aos="fade-up" data-aos-duration="500">What Exactly...</span> <br><span class="span" style="margin-left:130px" data-aos="fade-up" data-aos-duration="1700">Is a Tarea?</span></h1>
+            <h2 style="padding:100px; padding-top:0px;" data-aos="fade-up" data-aos-duration="500">Technically speaking, it's a Spanish word that's pronounced tuh-ray-uh, but its meaning is simply "task". <br> Tarea is the name of our service, but it's really anything you need to get done.<br>Got homework? You've got yourself a Tarea. Big Meeting? Tarea.<br>We wanted to use a very nonspecific or general word for our idea, as Tarea (the app) can be used in a lot of ways.</h2>
+            <h1 style="display:none;">some cool graphic showing tasks ha</h1>
+            <br>
+            <br>
+            <div class="grid" style="margin-top:150px; float: none;">
+                <div class="altobj" id="1">
+                    <div data-aos="zoom-in" data-aos-duration="500">
+                        <h1 style="margin-top:25%">Scheduled Tasks</h1>
+                    </div>
+                </div>
+                <div class="altobj" id="2">
+                    <div data-aos="zoom-in" data-aos-duration="800">
+                        <h1 style="margin-top:25%">Accountability</h1>
+                    </div>
+                </div>
+                <div class="altobj" id="3">
+                    <div data-aos="zoom-in" data-aos-duration="1200">
+                        <h1 style="margin-top:25%">Shared Tasks</h1>
+                    </div>
+                </div>
+                <div class="altobj" id="4">
+                    <div data-aos="zoom-in" data-aos-duration="1600">
+                        <h1 style="margin-top:25%">Google Classroom</h1>
+                    </div>
+                </div>
+                <div class="altobj" id="5">
+                    <div data-aos="zoom-in" data-aos-duration="2000">
+                        <h1 style="margin-top:25%">Rich Text and Images</h1>
+                    </div>
+                </div>
+                <div class="altobj" id="6">
+                    <div data-aos="zoom-in" data-aos-duration="2300">
+                        <h1 style="margin-top:25%">A Beautiful UI</h1>
+                    </div>
+                </div>
+              </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1 style="text-align: left; padding-left:90px; font-size:50px;" data-aos="fade-up" data-aos-duration="500">Already loving Tarea?</h1>
+            <p style="text-align: left; padding-left:90px; padding-right:90px; font-size:20px; margin-top:-20px;" data-aos="fade-up" data-aos-duration="500">Upgrade to Tarea+ for the ultimate experience and pay as you go.</p>
+            <img src="benefits.gif" style="width:87vw; border-radius: 20px;" data-aos="fade-up" data-aos-duration="500"> 
+            <div style="text-align: left; margin-left:80px; padding:15px;">
+                <button class="button-30" role="button" style="margin-right:10px" data-aos="fade-up" data-aos-duration="500">All Benefits</button>
+                <button class="button-29" role="button" style="margin-left:10px" data-aos="fade-up" data-aos-duration="1000">Subscribe Now</button>
+            </div>
+
+            <h1>Tired of subscription models?</h1>
+            <p>This December, we have a new product coming you won't want to miss.</p>
+
+            
             <div class="backgroundframe" id="animatedbackground">
                 <div class="backgroundframe-bg">
                     <img class="bg-color album-artwork" id="bg1" src="enhancedbackground.png" />
                     <img class="bg-black album-artwork" id="bg2" src="enhancedbackground.png" />
                 </div>
             </div>
+            
         </center>
     </body>
 </html>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
