--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
             <h2 data-aos="fade-up">Siri Shortcut</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
             <p data-aos="fade-up">
-                Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
+                Tons of tools for messaging apps including modes for text, audio, images, and more
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
@@ -109,7 +109,7 @@
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/countdown.png" />
             <p data-aos="fade-up">
-                A beautiful website to count down to any event. You can change the colors, date, and customize a ton of other options.
+                A beautiful website to count down to any event with rich customization
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
@@ -118,7 +118,7 @@
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/wiffdle.png" />
             <p data-aos="fade-up">
-                A fork of Poeltl Unlimited made in only a few days to support MLW Wiffleball stats, daily challenges, and more.
+                A fork of Poeltl Unlimited made to support MLW Wiffleball stats, daily challenges, and more
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://wiffdle.github.io">Play Now</a>
         </section>
@@ -127,7 +127,7 @@
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/margin.png" />
             <p data-aos="fade-up">
-                A nonfunctional, static landing page
+                A static, non-responsive landing page for a fictional budgeting app
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/marginexperiment/margin.html">Check It Out</a>
         </section>
@@ -136,7 +136,7 @@
             <h2 data-aos="fade-up">Siri Shortcut</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/duolingostreak.png" />
             <p data-aos="fade-up">
-                Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
+                The best way to scape Duolingo for your streak via Shortcuts
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
         </section>
@@ -145,7 +145,7 @@
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/tarea.png" />
             <p data-aos="fade-up">
-                A concept/landing page for a to-do app.
+                A landing page for a to-do app that I'm developing
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Check It Out</a>
         </section>
