--- a/projects.html
+++ b/projects.html
@@ -114,6 +114,15 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
         <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">michaeldors_creative</h1>
+            <h2 data-aos="fade-up">Instagram</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
+            <p data-aos="fade-up">
+                Public Instagram account for this website
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_creative/">Follow</a>
+        </section>
+        <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Wiffdle</h1>
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/wiffdle.png" />
@@ -148,6 +157,15 @@
                 A landing page for a to-do app that I'm developing
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Check It Out</a>
+        </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">michaeldors_</h1>
+            <h2 data-aos="fade-up">Instagram</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
+            <p data-aos="fade-up">
+                More private Instagram account for myself and my photos/videos
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_/">Request Follow</a>
         </section>
     </div>
 
