--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
-        <section class="projectarea" data-projecttype="website">
+        <section class="projectarea" data-projecttype="instagram">
             <h1 data-aos="fade-up">michaeldors_creative</h1>
             <h2 data-aos="fade-up">Instagram</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
@@ -158,7 +158,7 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Check It Out</a>
         </section>
-        <section class="projectarea" data-projecttype="website">
+        <section class="projectarea" data-projecttype="instagram">
             <h1 data-aos="fade-up">michaeldors_</h1>
             <h2 data-aos="fade-up">Instagram</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
