--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 
 
     <div class="projects">
+                <section class="projectarea" style="display:none">
+            <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/messagekit.png" />
+            <h1 data-aos="fade-up"><span>NEW</span>new</h1>
+            <h2 data-aos="fade-up" style="padding-left:115px;">new</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
+            <p data-aos="fade-up">
+new            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
+        </section>
         <section class="projectarea">
             <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/messagekit.png" />
             <h1 data-aos="fade-up"><span>NEW</span>MessageKit</h1>
