--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ new            </p>
         </section>
         <section class="projectarea">
             <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/messagekit.png" />
-            <h1 data-aos="fade-up"><span>NEW</span>MessageKit</h1>
-            <h2 data-aos="fade-up" style="padding-left:115px;">Siri Shortcut</h2>
+            <h1 data-aos="fade-up">MessageKit</h1>
+            <h2 data-aos="fade-up">Siri Shortcut</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
             <p data-aos="fade-up">
                 Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
