--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@
             <p data-aos="fade-up">
                 The best way to scape Duolingo for your streak via Shortcuts
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">I Want This</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Tarea</h1>
@@ -156,7 +156,7 @@
             <p data-aos="fade-up">
                 A landing page for a to-do app that I'm developing
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/tareaapp/index.html">Preview It</a>
         </section>
         <section class="projectarea" data-projecttype="instagram">
             <h1 data-aos="fade-up">michaeldors_</h1>
