--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,24 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_/">Request Follow</a>
         </section>
+        <section class="projectarea" data-projecttype="scratch">
+            <h1 data-aos="fade-up">Pop The Balloon</h1>
+            <h2 data-aos="fade-up">Scratch</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/scratch.png" />
+            <p data-aos="fade-up">
+                An old (not so good) scratch project made somewhere between 2017 and 19.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/416422550">Play It Now</a>
+        </section>
+                <section class="projectarea" data-projecttype="scratch">
+            <h1 data-aos="fade-up"></h1>
+            <h2 data-aos="fade-up">Scratch</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/scratch.png" />
+            <p data-aos="fade-up">
+                Another scratch game from before I used Unity for games, while I was learning web development.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/419386012"></a>
+        </section>
     </div>
 
     <div style="background: #202020;">
