--- a/projects.html
+++ b/projects.html
@@ -177,13 +177,13 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/416422550">Play It Now</a>
         </section>
                 <section class="projectarea" data-projecttype="scratch">
-            <h1 data-aos="fade-up"></h1>
+            <h1 data-aos="fade-up">Rocket Launch</h1>
             <h2 data-aos="fade-up">Scratch</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/scratch.png" />
             <p data-aos="fade-up">
                 Another scratch game from before I used Unity for games, while I was learning web development.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/419386012"></a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/419386012">Start The Game</a>
         </section>
     </div>
 
