--- a/projects.html
+++ b/projects.html
@@ -114,13 +114,13 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
         <section class="projectarea" data-projecttype="instagram">
-            <h1 data-aos="fade-up">michaeldors_creative</h1>
+            <h1 data-aos="fade-up">michaeldorsdotcom</h1>
             <h2 data-aos="fade-up">Instagram</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
             <p data-aos="fade-up">
                 Public Instagram account for this website
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_creative/">Follow</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldorsdotcom/">Follow</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Wiffdle</h1>
